Make sure the disks paths exist
Change-Id: I5331daafed35a105251a211ffc053f5cb61227ca

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Create directory
+  file:
+    path: "{{ item.1.path}}"
+    state: directory
+  with_indexed_items:
+    - "{{ virt_guest_disks }}"
 
 - name: Create the disks
   qemu_img:
