Change the owner of the disk files to qemu

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,9 @@ virt_guest_memory: 2
 #   size: SIZE in MB
 virt_guest_disks: []
 
+virt_guest_disks_owner: qemu
+virt_guest_disks_group: qemu
+
 # Networks to add
 # The format is:
 # - NET_NAME
