--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,14 @@
   with_indexed_items:
     - "{{ virt_guest_disks }}"
 
+- name: Change owner of the disks
+  file:
+    dest: "{{ item.1.path}}/{{virt_guest_name}}_{{item.0 }}.qcow2"
+    owner: "{{ virt_guest_disks_owner }}"
+    group: "{{ virt_guest_disks_group }}"
+  with_indexed_items:
+    - "{{ virt_guest_disks }}"
+
 - name: Create the guest
   virt:
     name: "{{ virt_guest_name }}"
